# Terraform

./: README.md  terraform.tfstate  terraform.tfstate.backup
meu_projeto/: pyproject.toml
meu_projeto/docs/: mkdocs.yml
my_project/: mkdocs.yml  pyproject.toml
