[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Raissa Sabino <99209068+Ra2861@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
